@@ -324,7 +324,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\sem_inc.h"
+				RelativePath="..\..\duma_sem.h"
 				>
 			</File>
 		</Filter>
